compiler/tools/fpp-check/test/port_instance/undef_param_set.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/port_instance/undef_param_set.fpp:3.3
  param set port paramSetOut
  ^
error: cannot find port `Fw` in this scope
